# TFLA-01

./: .gitignore  CMakeLists.txt  ChangeLog  NEWS  README  TODO  release.sh  tfla-01.qrc  tfla01config.h.in
cmake/: Findieee1284.cmake
doc/: CMakeLists.txt
doc/schematic/: tfla-01.sch
doc/user/: CMakeLists.txt  tfla-01.xsl
doc/user/en/: assistantconfig.xml  tfla-01.xml
libieee1284/: CMakeLists.txt
libieee1284/include/: config.h
libieee1284/src/: access_io.c
share/tfla-01/translations/: de.ts
share/win32/: tfla-01_win32.rc
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  analyzerresultdialog.cpp  analyzerresultdialog.h  centralwidget.cpp  centralwidget.h  data.cpp  data.h  datacollector.cpp  datacollector.h  dataplot.cpp  dataplot.h  dataview.cpp  dataview.h  global.h  help.cpp  help.h  main.cpp  parameterbox.cpp  parameterbox.h  platformhelpers.h  protocolsettingsdialog.cpp  protocolsettingsdialog.h  settings.cpp  settings.h  tferror.h  tfla01.cpp  tfla01.h  triggerwidget.cpp  triggerwidget.h  updatechecker.cpp  updatechecker.h  wheelscrollbar.cpp  wheelscrollbar.h
src/hardware/: CMakeLists.txt  parport.cpp  parport.h  parporterror.cpp  parporterror.h  parportlist.cpp  parportlist.h
src/protocol/: CMakeLists.txt  analyzer.cpp  analyzer.h  analyzermanager.cpp  analyzermanager.h  i2c.cpp  i2c.h  spi.cpp  spi.h
util/: CMakeLists.txt
util/datadump/: CMakeLists.txt
util/datadump/common/: datadump.cpp  datadump.h
util/datadump/libieee1284/: CMakeLists.txt  datadump.cpp
util/datadump/ppdev/: CMakeLists.txt  datadump.cpp
util/parporttest/: CMakeLists.txt
util/parporttest/read1/: CMakeLists.txt  read1.c
util/parporttest/readcount/: CMakeLists.txt  readcount.c
